Revision history for DBIx::Class

    * Fixes
        - Disable mysql_auto_reconnect for MySQL - depending on the ENV
          it sometimes defaults to on and causes major borkage on older
          DBD::mysql versions
        - Fix dropped bind values in select/group_by on Oracle (omission
          from 0542ec57 and 4c2b30d6)

0.08127 2011-01-19 16:40 (UTC)
    * New Features / Changes
        - Schema/resultsource instances are now crossreferenced via a new
          system guaranteeing leak-free mutually assured destruction
        - DBIx::Class now warns when the user erroneously supplies
          AutoCommit => 0 to connect()
        - A warning is also issued before forcing the RaiseError
          setting of externally supplied DBI handles
        - Switch to a warning when find() is invoked with both a 'key'
          argument and a NULL-containing condition to satisfy the named
          constraint. Previously (starting with 0.08124) an exception was
          thrown
        - Switch to a warning when a commit is attempted with an out-of-sync
          transaction_depth (someone issued a begin externally to DBIC).
          Previously (starting with 0.08124) an exception was thrown

    * Fixes
        - A number of improvements/diagnostics of multiple active resultset
          handling on MSSQL over DBD::ODBC
        - Revert default selection to being lazy again (eagerness introduced
          in 0.08125) - fixes DBIx::Class::Helper::ResultSet::RemoveColumns
        - Fix losing order of columns provided in select/as (regression from
          0.08125)
        - Unaliased "dark" selectors no longer throw off prefetch
        - Fix proper composition of bind values across all possible
          SQL areas ( group_by => \[ ... ] now works properly )
        - Allow populate to skip empty has_many relationships which makes
          it easier to pass HashRefInflator data directly to ->populate