@@ -6,6 +6,7 @@ Revision history for DBIx::Class
           DBD::mysql versions
         - Fix dropped bind values in select/group_by on Oracle (omission
           from 0542ec57 and 4c2b30d6)
+        - Fix problems with M.A.D. under CGI::SpeedyCGI (RT#65131)
 
 0.08127 2011-01-19 16:40 (UTC)
     * New Features / Changes
